--- a/index.html
+++ b/index.html
@@ -388,13 +388,25 @@ style="FONT-FAMILY: 'Bauhaus 93'; mso-bidi-font-family: Arial">
 <p><span class="STYLE189 STYLE263">Created on 2017/06/22. Last update : 2017/09/02</span></p>
 <p>    
 
-<!-- Start of StatCounter Code for Default Guide -->
-<a title="web analytics" href="http://statcounter.com/"
-target="_blank"><img
+<!-- Start of StatCounter Code for Webs (previously known as
+Freewebs) -->
+<script type="text/javascript">
+var sc_project=11443908; 
+var sc_invisible=0; 
+var sc_security="f48624c4"; 
+var scJsHost = (("https:" == document.location.protocol) ?
+"https://secure." : "http://www.");
+document.write("<sc"+"ript type='text/javascript' src='" +
+scJsHost+
+"statcounter.com/counter/counter.js'></"+"script>");
+</script>
+<noscript><div class="statcounter"><a title="web analytics"
+href="http://statcounter.com/" target="_blank"><img
+class="statcounter"
 src="//c.statcounter.com/11443908/0/f48624c4/0/" alt="web
-analytics" style="border:none;"></a>
-<!-- End of StatCounter Code for Default Guide -->
-
+analytics"></a></div></noscript>
+<!-- End of StatCounter Code for Webs (previously known as
+Freewebs) -->
 </body>
 </html>
 
