--- a/index.html
+++ b/index.html
@@ -407,8 +407,7 @@ src="//c.statcounter.com/11443908/0/f48624c4/0/" alt="web
 analytics"></a></div></noscript>
 <!-- End of StatCounter Code for Webs (previously known as
 Freewebs) -->
-</body>
-</html>
 
+<a href="https://clustrmaps.com/site/19s1l"  title="Visit tracker"><img src="//www.clustrmaps.com/map_v2.png?d=s4laK-NN4VM95kRGXdsHPK9-ISje77djvPDkj_PEPK4&cl=ffffff" /></a>
 </body>
 </html>
