--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@ style="FONT-FAMILY: 'Monotype Corsiva'; COLOR: green; mso-bidi-font-family: Aria
           <div align="justify">
             <div align="justify">
               <p><strong>Robust Survey Aggregation with Student-t Distribution and Sparse Representation</strong> [<a href="pdf/17_IJCAI_Robust_Survey_Aggregation.pdf">PDF</a>] [Code]<br />
-       <strong>Qingtao Tang, <Strong>Tao Dai(co-first)</Strong>, Li Niu, Yisen Wang, Shu-Tao Xia, Jianfei Cai <br />
+       Qingtao Tang, <Strong>Tao Dai(co-first)</Strong>, Li Niu, Yisen Wang, Shu-Tao Xia, Jianfei Cai <br />
                 <em>2017 International Joint Conferences on Artificial Intelligence  (<strong>IJCAI-2017</strong>), Melbourne, Sept. 2017.</em> (<strong>Oral</strong>)
               </p>
             </div>
@@ -262,8 +262,8 @@ style="FONT-FAMILY: 'Monotype Corsiva'; COLOR: green; mso-bidi-font-family: Aria
 		 <li>
           <div align="justify">
             <div align="justify">
-              <p><strong>Blind Quality Assessment of Multiply-distorted Images Based on Structural Degradation</strong> PDF [Code]<br />
-      <strong> Tao Dai</strong>, Ke Gu, Zhiya Xu, Qingtao Tang, Haoyi Liang, Yong-bing Zhang, Shu-Tao Xia <br />
+              <p><strong>Blind Quality Assessment of Multiply-distorted Images Based on Structural Degradation</strong> [PDF] [Code]<br />
+      <strong>Tao Dai</strong>, Ke Gu, Zhiya Xu, Qingtao Tang, Haoyi Liang, Yong-bing Zhang, Shu-Tao Xia <br />
                     <em>IEEE International Conference on Image Processing  (<strong>ICIP-2017</strong>),  Beijing, China, Sep. 2017. </em>(<strong>Oral</strong>)
               </p>
             </div>
@@ -284,7 +284,7 @@ style="FONT-FAMILY: 'Monotype Corsiva'; COLOR: green; mso-bidi-font-family: Aria
           <div align="justify">
             <div align="justify">
               <p><strong>Student-t Process Regression with Student-t Likelihood</strong> [<a href="pdf/17_IJCAI_TRPT.pdf">PDF</a>] [Code]<br />
-       <strong>Qingtao Tang, Li Niu, Yisen Wang, <Strong>Tao Dai</Strong>, Jianfei Cai,Shu-Tao Xia, <br />
+       Qingtao Tang, Li Niu, Yisen Wang, <Strong>Tao Dai</Strong>, Jianfei Cai,Shu-Tao Xia <br />
                 <em>2017 International Joint Conferences on Artificial Intelligence  (<strong>IJCAI-2017</strong>), Melbourne, Sept. 2017.</em> (<strong>Oral</strong>)
               </p>
             </div>
